# insane-cli

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  PLANO-TESTE-RATE-LIMIT.md  REPORT.md  SPEC-AGENT.md  SPEC-UX.md  SPEC.md
examples/: config.example.toml
scripts/: bench.ps1  bench.sh
src/: agent.rs  cache.rs  cli.rs  config.rs  context.rs  error.rs  fileops.rs  lib.rs  limiter.rs  main.rs  output.rs  secrets.rs  session.rs  session_store.rs  ui.rs
src/agent/: lenient.rs
src/client/: mod.rs  nim.rs  sse.rs
src/commands/: ask.rs  chat.rs  config_cmd.rs  doctor.rs  explain.rs  fix.rs  mod.rs  models.rs  refactor.rs  review.rs  status.rs  test.rs
src/tools/: exec.rs  fs.rs  mod.rs  permission.rs  sandbox.rs
src/tui/: app.rs  format.rs  mod.rs  theme.rs  ui_impl.rs  view.rs
tests/: agent_loop.rs  cli_e2e.rs  fileops_secrets.rs  rate_limit.rs  retry.rs  streaming.rs  tools_sandbox.rs
tests/common/: mod.rs
