[package]
name = "insane-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "CLI de assistencia a programacao para providers OpenAI-compatible"
license = "MIT"

[lib]
name = "insane_cli"
path = "src/lib.rs"

[[bin]]
name = "insane"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-std", "io-util", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures-util = "0.3"
# Not in SPEC's explicit crate list, but already pulled in transitively by
# reqwest (bytes_stream() yields bytes::Bytes) -- naming the type directly
# avoids an unnecessary Vec<u8> copy per chunk.
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
directories = "5"
keyring = "2"
ignore = "0.4"
regex = "1"
similar = "2"
tempfile = "3"
thiserror = "1"
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clipboard = "0.5"

[dev-dependencies]
# Mock NIM server for tests/ (axum, chosen over wiremock/httpmock so the mock
# can do custom SSE streaming, raw-timestamp request logging, and abrupt
# connection cutoffs that a declarative mocking DSL can't express easily).
axum = "0.7"
# Extra features (net, io-util) needed only by the test-side mock server;
# unified with the main `tokio` dependency above for release builds.
tokio = { version = "1", features = ["net", "io-util"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Self-dependency enabling the `test-utils` feature so integration tests in
# tests/ can use `insane_cli::ui::test_support::FakeUi` (a non-blocking
# `AgentUi`) instead of `PlainUi`, which would block on real stdin when the
# suite is run from an interactive terminal.
insane-cli = { path = ".", features = ["test-utils"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[features]
# Exposes test-only helpers (e.g. `FakeUi`) so integration tests in tests/
# can build a non-blocking `AgentUi` without touching real stdin.
default = []
test-utils = []
